--- a/style_example/style.playground/Documentation/stylesheet.css
+++ b/style_example/style.playground/Documentation/stylesheet.css
@@ -8,7 +8,7 @@ vertical-align: baseline
 }
 
 body {
-background-color: rgba(255,255,255,0.65);
+background-color: rgba(255,255,255,0.9);
 color: rgba(0,0,0,1);
 font-size: 85%;
 font-family: Helvetica;
@@ -16,37 +16,35 @@ margin-left: 15px;
 margin-right: 25%;
 }
 
-h1 {
+h1, h2, h3, h4 {
+color: rgba(125,125,125,1);
+font-family: Helvetica;
+font-weight: 100;
 font-size: 1.8em;
-margin-bottom: 1px;
+margin-bottom: 3px;
 margin-top: 15px;
 padding-top: 0;
 }
 
+h1 {
+font-size: 2.0em;
+}
+
 h2 {
-font-size: 1.7em;
-margin-bottom: 1px;
-margin-top: 12px;
-padding-top: 0;
+font-size: 1.8em;
 }
 
 h3 {
 font-size: 1.6em;
-margin-bottom: 1px;
-margin-top: 12px;
-padding-top: 0;
 }
 
 h4 {
-font-size: 1.5em;
-margin-bottom: 1px;
-margin-top: 12px;
-padding-top: 0;
+font-size: 1.4em;
 }
 
 p {
-	/*font-size: 1.4em;*/
 	margin-bottom: 6px;
+	padding-left: 10px;
 }
 
 .section {
@@ -85,7 +83,7 @@ margin-bottom: 2px;
 }
 
 .look-block {
-background-color: rgba(156,216,255,.9);
+background-color: rgba(156,216,255,1);
 border-left: 5px solid rgba(32,166,255,1);
 display: block;
 margin: 15px 45px 0px 35px;
@@ -93,7 +91,7 @@ padding: 5px 10px 10px;
 }
 
 .fix-block {
-background-color: rgba(246,250,125,.9);
+background-color: rgba(246,250,125,1);
 border-left: 5px solid rgba(203,209,20,1);
 display: block;
 margin: 15px 45px 0px 35px;
@@ -101,8 +99,16 @@ padding: 5px 10px 10px;
 }
 
 .write-block {
-background-color: rgba(192,233,186,.9);
+background-color: rgba(192,233,186,1);
 border-left: 5px solid rgba(66,202,49,1);
+display: block;
+margin: 15px 45px 0px 35px;
+padding: 5px 10px 10px;
+}
+
+.extra-block { 
+background-color: rgba(232,199,248,1);
+border-left: 5px solid rgba(177,50,236,1);
 display: block;
 margin: 15px 45px 0px 35px;
 padding: 5px 10px 10px;
