--- a/abh_playground.css
+++ b/abh_playground.css
@@ -10,19 +10,19 @@ vertical-align: baseline
 body {
 background-color: rgba(255,255,255,0.9);
 color: rgba(0,0,0,1);
-font-size: 85%;
+font-size: 100%;
 font-family: Helvetica;
 margin-left: 15px;
 margin-right: 25%;
 }
 
 h1, h2, h3, h4 {
-color: rgba(125,125,125,1);
+color: rgba(115,115,115,1);
 font-family: Helvetica;
 font-weight: 100;
 font-size: 1.8em;
 margin-bottom: 3px;
-margin-top: 15px;
+margin-top: 25px;
 padding-top: 0;
 }
 
@@ -31,26 +31,37 @@ font-size: 2.0em;
 }
 
 h2 {
-font-size: 1.8em;
-}
-
-h3 {
 font-size: 1.6em;
 }
 
+h3 {
+font-size: 1.3em;
+}
+
 h4 {
-font-size: 1.4em;
+font-size: 1.1em;
 }
 
-section > p {
-	margin-bottom: 6px;
+p {
+	margin-bottom: 10px;
 	padding-left: 10px;
 }
 
-section > ol, li {
+li {
 	list-style-position: inside;
+	margin-top: 6px;
 	margin-bottom: 6px;
 	padding-left: 10px;
+}
+
+table {
+	margin: 15px;
+}
+
+table, th, td {
+    border: 1px solid rgba(125,125,125,1);
+    border-collapse: collapse;
+    padding: 5px;
 }
 
 .section {
@@ -88,34 +99,28 @@ border-bottom: 1px solid black;
 margin-bottom: 2px;
 }
 
-.look-block {
-background-color: rgba(156,216,255,1);
-border-left: 5px solid rgba(32,166,255,1);
+.look-block,.fix-block,.write-block,.extra-block {
 display: block;
 margin: 15px 45px 0px 35px;
 padding: 5px 10px 10px;
+}
+
+.look-block {
+background-color: rgba(156,216,255,1);
+border-left: 5px solid rgba(32,166,255,1);
 }
 
 .fix-block {
 background-color: rgba(246,250,125,1);
 border-left: 5px solid rgba(203,209,20,1);
-display: block;
-margin: 15px 45px 0px 35px;
-padding: 5px 10px 10px;
 }
 
 .write-block {
 background-color: rgba(192,233,186,1);
 border-left: 5px solid rgba(66,202,49,1);
-display: block;
-margin: 15px 45px 0px 35px;
-padding: 5px 10px 10px;
 }
 
 .extra-block { 
 background-color: rgba(232,199,248,1);
 border-left: 5px solid rgba(177,50,236,1);
-display: block;
-margin: 15px 45px 0px 35px;
-padding: 5px 10px 10px;
 }
